--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,49 @@
-version: '3'
+version: "3"
 services:
+  plex:
+    image: lscr.io/linuxserver/plex:latest
+    container_name: plex
+    network_mode: bridge
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      - VERSION=docker
+    volumes:
+      - ./plex-volumes/library:/config
+      - ./plex-volumes/tvseries:/tv
+      - ./plex-volumes/movies:/movies
+    ports:
+      - 32400:32400
+    restart: unless-stopped
+  qbittorrent:
+    image: lscr.io/linuxserver/qbittorrent:latest
+    container_name: qbittorrent
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Paris
+      - WEBUI_PORT=8080
+    volumes:
+      - ./plex-volumes/torrent/config:/torrent-config
+      - ./plex-volumes/torrent/downloads:/downloads
+    ports:
+      - 8080:8080
+      - 6881:6881
+      - 6881:6881/udp
+    restart: unless-stopped
   sonarr:
     image: linuxserver/sonarr
     container_name: sonarr
-    restart: always
+    restart: unless-stopped
     ports:
       - 8989:8989
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Europe/Paris
-    # volumes:
-    #   - <chemin_local_config>:/config
-    #   - <chemin_local_media>:/tv
-    #   - <chemin_local_download>:/downloads
+    volumes:
+      - ./plex-volumes/sonarr/config:/config
+      - ./plex-volumes/sonarr/tv:/tv
+      - ./plex-volumes/sonarr/dl:/downloads
+
